--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -143,15 +143,6 @@ span.way {
   color:#e9e9e9;
 }
 
-.navWrapper .overlay .wrap ul.wrap-nav ul li a {
-  font-size: 18px;
-  padding: 1px 0;
-}
-
-.navWrapper .overlay .wrap ul.wrap-nav li .contactInfo {
-  font-size: 18px;
-}
-
 .navWrapper .overlay .wrap ul.wrap-nav ul li a,
 .navWrapper .overlay .wrap ul.wrap-nav li .contactInfo a.email {
   color: #fff;
